Improve item styling

--- a/client/components/Layout.styl
+++ b/client/components/Layout.styl
@@ -92,6 +92,16 @@ a
   &:hover
     text-decoration none
 
+
+.btn
+  display block
+  margin-top 10px
+  background blue
+  color white
+  padding 10px 0
+  cursor pointer
+
+
 .item
   display inline-block
   vertical-align top
@@ -105,14 +115,6 @@ a
 
   .item-name
     margin-top 20px
-
-  &>a
-    display block
-    margin-top 10px
-    background blue
-    color white
-    padding 10px 0
-    cursor pointer
 
     &.disabled
       background gray
