Improve cart button functionality

--- a/client/components/Items/Item.styl
+++ b/client/components/Items/Item.styl
@@ -1,3 +1,10 @@
+
+.CartButton
+  &.disabled
+    pointer-events none
+    background gray
+    cursor default
+
 .ItemDetails
   padding-top 50px
 
