Add cart display to header

--- a/client/components/Layout.styl
+++ b/client/components/Layout.styl
@@ -218,3 +218,10 @@ a
 
   .qty
     margin-right 10px
+
+.CartMiniDisplay
+  color black
+  margin-left 20px
+  span
+    display inline-block
+    margin-left 5px
